	- ~ and !~ operators in row queries now match anywhere in the cell

2016-08-30 Release 3.2
	- add timeout option for opening URLs (avoids long wait in unit
	  tests)
	- encoding fixes for Python2
	- add HXLColumn.has_attribute() method
	- add an optional parsed attribute to HXLRow.get() to try parsing
	  the value according to attributes (currently supports +list)
	- add experimental support for the +list attribute

2016-07-28 Release 3.1
	- change request handling to work better with requests_cache (no
	  more streaming directly from the raw object in the request response)

2016-07-23 Release 3.0
	- use the Python requests library in hxl.io (which will allow
	  add-ons like requests_cache)
	- the tagger now has an option for a default tag
	- add unit tests for Tagger, along option to force a full header
	  match and a default tag for non-matching headers

2016-06-22 Release 2.8
	- add a new Explode filter that changes series data to a more-normalised form (no command-line version yet)
	- improvements to Add Column filter
	- better number handling in Clean Data filter (can now handle exponential notation)
	- add mask parameter to Merge Data filter
	- start support for reading/writing filter chains encoded in JSON
	- added add_attribute and remove_attribute methods for a dataset
	- documentation and unit test improvements